force-app/main/default/objects/rstk__soapi__c/fields/Order_Comment__c.field-meta.xml
<CustomField>
    <fullName>Order_Comment__c</fullName>
    <label>Order Comment</label>
    <type>TextArea</type>
</CustomField>