force-app/main/default/objects/rstk__soapi__c/fields/Order_Summary__c.field-meta.xml
<CustomField>
    <fullName>Order_Summary__c</fullName>
    <label>Order Summary</label>
    <length>18</length>
    <type>Text</type>
</CustomField>